--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- <!DOCTYPE html> -->
 <!--Written for use by the creators of Parade: Carter Tune and Josh Spicer -->
 <!--Contact: josh<<@>>___parade.events -->
+<!-- Available on github. https://github.com/parade-events/parade-events.github.io -->
 <html>
   <link href='./css/style.css' rel="stylesheet">
   <link href='./css/timeline.css' rel="stylesheet">
@@ -172,9 +173,8 @@
 
                     <p style="font-size:16px;">
                       Josh is studying Computer Science/Cyber Operations and recently completed a co-op at
-                      Virtual Security Research (VSR). He hopes to leverage his experience managing Northeastern clubs
-                      to create a useful platform for all students! Josh is involved in product development and
-                      deployment.
+                      Virtual Security Research (VSR). Josh is involved in product development while also
+                      handling creation, deployment, and management of the Parade infrastructure.
                   </p>
                     </div>
                 </div>
@@ -234,6 +234,14 @@
                     know your feature requests, bugs, or general thoughts. For spotlight submissions or other inquiries,
                     a member of the Parade team will follow up with you at the address you provide.
                   </p>
+                  <p>
+                    You can also reach us at
+                  <a
+                    style="color:#fff"
+                    href="mailto:team@parade.events">
+                    team@parade.events
+                  </a>
+                  </p>
                 </div>
               <form id="contact-form" method="post">
                     <h2>Name</h2>
@@ -247,7 +255,7 @@
                     </textarea>
                     <br>
                     <button type="button" style="margin-top:20px;" onClick="lambdaEmailSubmit()" class="btn" >Submit Feedback</button>
-                    <!-- TODO: Add some kind of capcha/CSRF -->
+                    <!-- TODO: Add some kind of capcha/CSRFprotect -->
               </form>
 
               <h2 style="font-size: 50px;margin-bottom:10px;margin-top:15px">Follow us!</h2>
@@ -265,7 +273,7 @@
 
 
               <h2 style="font-size: 50px;margin-bottom:15px">Latest Blog Post</h2>
-               <a style="text-decoration:none;color:'#fff'" href=" https://parade.events/blog/welcome-guide/ ">
+               <a style="text-decoration:none;color:#fff" href=" https://parade.events/blog/welcome-guide/ ">
                  <div class="announceTitle"><img class="infoIcon" src="/assets/info-white.png">  Parade Welcome Guide</div>
                <div class="announceDescription"> Aug. 21 -    Welcome to Parade! Everybody on The Parade Team is so excited
                  to get Parade in the  hands of students! We’re calling this initial launch our “Beta Phase”, where we encourage...</div></a></span>
@@ -316,14 +324,11 @@
 
 
 
-
-
             <!--- START FOURTH PANEL -->
             <!-- <div id="Footer" class="fourthPanel">
-            <a class="whiteLink" href="mailto:hello@parade.events"><b>Parade &copy 2018</b></a>
-            </div>
+            <a class="prettyFontColor" href="mailto:hello@parade.events"><b>Parade &copy 2018</b></a>
+            </div> -->
 
-        </div> -->
 
 
         <!-- Josh Functions -->
