--- a/404.html
+++ b/404.html
@@ -62,10 +62,16 @@
   <h1> ¯\_(ツ)_/¯</h1>
 
   <p>The link you're trying to reach likely <strong>requires the Parade app</strong> (available for iOS and Android).</p>
-  <p>Try this link again on your smartphone  <strong>after</strong> logging into Parade!</p>
+  <p>Try this link again on your smartphone  <strong>after</strong> logging into Parade!<br>
+      <b>Note</b>: This link needs to be opened in <i>Safari</i> on iOS.
+  </p>
+
+
   <p><a href="https://parade.events/"> << Go home</a></p>
     <p><a href="https://parade.events/blog/welcome-guide"> Read the Welcome Guide >></a></p>
 </div>
+
+
 
       </div>
     <!-- </main><footer class="site-footer h-card">
