terms and conditions for play store

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -7,10 +7,11 @@
                     in this Privacy Policy, when necessary to continue the service you agree
                     to by downloading and using the app, or when required by law.
                   </p> <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible
-                    at https://parade.events/terms-and-conditions.
+                    at https://parade.events/terms-and-conditions By using Parade Events, you agree to the published terms and condition.
                   </p> <p><strong>Information Collection and Use</strong></p> <p>For a better experience, while using our Service, I may require you to provide us with certain
                     personally identifiable information, including but not limited to full name, email address, profile photo URI, and additional info provided by Google OAuth. The information that I request will be retained on your device and also
                     retained within the application's secured database.
+
                   </p> <p>The app also utilizes multiple third party services that may collect information used to identify you.</p> <div><p>Below is an incomplete list of privacy policies from third party service providers used by the app. Note that this list of services may increase at any time without prior notice or update of this list, although an effort will be made to keep this list up to date.</p> <ul>
                     <li><a href="https://mlab.com/company/legal/privacy/" target="_blank">Mlab</a>
                     <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a>
