--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,24 +2,24 @@
                   </p> <p>This page is used to inform visitors regarding the policies with the collection, use, and
                     disclosure of Personal Information at Parade Events (the 'Service').
                   </p> <p>By utilizing the Service, you agree to the collection and use of information in relation
-                    to this policy. The Personal Information that I collect is used for providing and improving the
+                    to this policy. The Personal Information collected is used for providing and improving the
                     Service. I will not use or share your information with anyone except as described
                     in this Privacy Policy, when necessary to continue the service you agree
                     to by downloading and using the app, or when required by law.
                   </p> <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible
-                    at https://parade.events/terms-and-conditions By using Parade Events, you agree to the published terms and condition.
-                  </p> <p><strong>Information Collection and Use</strong></p> <p>For a better experience, while using our Service, I may require you to provide us with certain
-                    personally identifiable information, including but not limited to full name, email address, profile photo URI, and additional info provided by Google OAuth. The information that I request will be retained on your device and also
+                    at https://parade.events/terms-and-conditions. By using Parade Events, you agree to the published Terms and Conditions.
+                  </p> <p><strong>Information Collection and Use</strong></p> <p>For a better experience while using the Service certain
+                    personally identifiable information may be collected including, but not limited to: full name, email address, profile photo URI, and additional info provided by Google OAuth. The information that I request will be retained on your device and also
                     retained within the application's secured database.
 
-                  </p> <p>The app also utilizes multiple third party services that may collect information used to identify you.</p> <div><p>Below is an incomplete list of privacy policies from third party service providers used by the app. Note that this list of services may increase at any time without prior notice or update of this list, although an effort will be made to keep this list up to date.</p> <ul>
+                  </p> <p>The app also utilizes multiple third party services that may collect information used to identify you.</p> <div><p>Below is an incomplete list of privacy policies from third party service providers used by the app. Note that this list of services may increase at any time without prior notice or update of this list, although an effort will be made to keep this list up to date. By using the Service, you also agree to these policies.</p> <ul>
                     <li><a href="https://mlab.com/company/legal/privacy/" target="_blank">Mlab</a>
                     <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a>
                     <li><a href="https://www.apple.com/legal/privacy/en-ww/" target="_blank">Apple</a>
                     <li><a href="https://aws.amazon.com/privacy/" target="_blank">Amazon Web Services</a>
                     <li><a href="https://auth0.com/privacy" target="_blank">Auth0</a></li> <!----> <!----> <!----> <!----> <!----></ul></div> <p><strong>Log Data</strong></p> <p> Whenever you use the Service, logging data may be collected. This Log Data may include information such as your device Internet Protocol (“IP”) address,
                     device name, operating system version, the configuration of the app when utilizing the Service,
-                    the time and date of your use of the Service, personal identifiers, and other relevant statistics. We will not share this information with anybody except when necessary.
+                    the time and date of your use of the Service, personal identifiers, and other relevant statistics. We will not share this information with anybody except when absolutely necessary to perform our Service.
                   </p> <p><strong>Cookies</strong></p> <p>Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These
                     are sent to your browser from the websites that you visit and are stored on your device's internal memory.
                   </p> <p>This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries
