--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <p style="font-size:16px;">
                       Josh is studying Computer Science/Cyber Operations and recently completed a co-op at
                       Virtual Security Research (VSR). Josh is involved in product development while also
-                      handling creation, deployment, and management of the Parade infrastructure.
+                      handling deployment and management of Parade's cloud infrastructure.
                   </p>
                     </div>
                 </div>
