added android store links

--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
                          class="dlButton"
                          src='./assets/app-store-badge.svg' />
                           </a>
-                       <a style="text-decoration: none" href="#">
+                       <a style="text-decoration: none" href="https://play.google.com/store/apps/details?id=com.parade">
                         <img
-                        onclick="alert('Android beta starting late August! Join our mailing list below for additional info.')"
                         class="dlButton"
                         src='./assets/play-store-badge.png' />
                          </a>
