--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link href="https://cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="An Event Discovery app for Northeastern University clubs and student organizations. Available on Android (soon), iPhone, and iPad.">
-      <meta name="keywords" content="aoun,iOS,Android,iPhone,App Store,Parade,Northeastern,RSVP,NU,NEU,events,clubs,students,student organizations,student orgs,Northeastern University,Boston,MA,app,application,calendar,events calendar,SGA,university,CS,discover,study,huskies">
+      <meta name="description" content="An event discovery app for Northeastern University clubs and student organizations. Available now on Android, iPhone, and iPad.">
+      <meta name="keywords" content="Northeastern,aoun,iOS,Android,iPhone,App Store,Play Store,@paradeapp,@paradeeventsapp,Parade,elephant,blue,RSVP,NU,NEU,events,clubs,students,student organizations,student orgs,Northeastern University,Boston,MA,app,application,calendar,events calendar,SGA,university,CS,discover,study,huskies,fall fest,activities fair">
       <meta name="author" content="Josh Spicer,Carter Tune">
       <!-- Favicon -->
       <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
@@ -59,7 +59,7 @@
                            experience!
                          </noscript>
                          <div class='logoAndName'>
-                           <img class='icon' src=./assets/RoundedIcon.png />
+                           <img class='icon' alt="Parade elephant blue logo" src=./assets/RoundedIcon.png />
                            <div class='paradeNameWithShortDescription'>
                               <img class='paradeTitle' src=./assets/parade_font_white.png />
                               <h2 style="margin-top: 8px;line-height: 27px;font-size:25.5px;">An events app for Northeastern clubs.</h2>
