apple-itunes-app smart banner

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <meta name="description" content="An event discovery app for Northeastern University clubs and student organizations. Available now on Android, iPhone, and iPad.">
       <meta name="keywords" content="Northeastern,aoun,iOS,Android,iPhone,App Store,Play Store,@paradeapp,@paradeeventsapp,Parade,elephant,blue,RSVP,NU,NEU,events,clubs,students,student organizations,student orgs,Northeastern University,Boston,MA,app,application,calendar,events calendar,SGA,university,CS,discover,study,huskies,fall fest,activities fair">
       <meta name="author" content="Josh Spicer,Carter Tune">
+      <meta name="apple-itunes-app" content="app-id=1380171412">
+
       <!-- Favicon -->
       <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
       <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
