--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <meta name="description" content="An event discovery app for Northeastern University clubs and student organizations. Available now on Android, iPhone, and iPad.">
       <meta name="keywords" content="Northeastern,aoun,iOS,Android,iPhone,App Store,Play Store,@paradeapp,@paradeeventsapp,Parade,elephant,blue,RSVP,NU,NEU,events,clubs,students,student organizations,student orgs,Northeastern University,Boston,MA,app,application,calendar,events calendar,SGA,university,CS,discover,study,huskies,fall fest,activities fair">
       <meta name="author" content="Josh Spicer,Carter Tune">
+      <meta name="apple-itunes-app" content="app-id=1380171412">
+
       <!-- Favicon -->
       <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
       <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
@@ -218,8 +220,57 @@
                         </p>
                         </div>
 
+
+
               </div>
-            </div>
+
+
+              <div class='meetTheTeamRow'>
+                <div class='bio'>
+                      <img
+                      class='headshot'
+                      src='./assets/faces/chris.jpg'
+                      alt='chris' />
+                      <div>
+                        <a style="text-decoration: none" href="https://www.linkedin.com/in/chrisreusch/">
+                            <img style="padding:10px;padding-top:15px;margin-bottom:5px;width:20px;height:20px"src='./assets/social/linkedin.png'/>
+                        </a>
+                      </div>
+                      <h2 style="margin-top: 8px;font-size:35px;margin-bottom:2px">Chris Reusch</h2>
+                      <h3 style="margin:0px">Developer</h3>
+
+                      <p style="font-size:16px;">
+                        Chris is a third year Applied Physics major and recently completed his co-op at Tesla in the Bay Area.
+                        Chris is involved in product development and data management.
+                      </p>
+                      </div>
+
+                      <div class='bio'>
+                            <img
+                            class='headshot'
+                            src='./assets/faces/casey.jpeg'
+                            alt='casey' />
+                            <div>
+                              <a style="text-decoration: none" href="https://www.linkedin.com/in/casey-paxton-585069138/">
+                                  <img style="padding:10px;padding-top:15px;margin-bottom:5px;width:20px;height:20px"src='./assets/social/linkedin.png'/>
+                              </a>
+                          </div>
+                            <h2 style="margin-top: 8px;font-size:35px;margin-bottom:2px">Casey Paxton</h2>
+                            <h3 style="margin:0px">Marketer</h3>
+
+                            <p style="font-size:16px;">
+                              Casey is a third year studying Communication Studies and Business Administration.
+                              She recently completed a co-op at Salsify doing employment branding,
+                              and has joined the Parade team as a Social Media Marketer
+                            </p>
+                            </div>
+
+
+
+                  </div>
+
+
+              </div>
 
             <!-- START THIRD PANEL -->
             <div id="Contact" class="prettyColor dynamicPanel thirdPanel">
