new team member styling

--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
 
     <h2 class="prettyFontColor secondPanel" style="font-size:60px;margin-bottom:15px">Meet the Team.</h2>
 
+
+
               <div class='meetTheTeam'>
 
                 <div class='meetTheTeamRow'>
@@ -256,7 +258,7 @@
                               </a>
                           </div>
                             <h2 style="margin-top: 8px;font-size:35px;margin-bottom:2px">Casey Paxton</h2>
-                            <h3 style="margin:0px">Marketer</h3>
+                            <h3 style="margin:0px">Marketing</h3>
 
                             <p style="font-size:16px;">
                               Casey is a third year studying Communication Studies and Business Administration.
@@ -323,10 +325,18 @@
 
 
               <h2 style="font-size: 50px;margin-bottom:15px">Latest Blog Post</h2>
-               <a style="text-decoration:none;color:#fff" href=" https://parade.events/blog/welcome-guide/ ">
-                 <div class="announceTitle"><img class="infoIcon" src="/assets/info-white.png">  Parade Welcome Guide</div>
+               <a style="text-decoration:none;color:#fff" href=" https://parade.events/blog/husky-startup/ ">
+                 <!-- <div class="announceTitle"><img class="infoIcon" src="/assets/info-white.png">  Parade Welcome Guide</div>
                <div class="announceDescription"> Aug. 21 -    Welcome to Parade! Everybody on The Parade Team is so excited
-                 to get Parade in the  hands of students! We’re calling this initial launch our “Beta Phase”, where we encourage...</div></a></span>
+                 to get Parade in the  hands of students! We’re calling this initial launch our “Beta Phase”, where we encourage...</div></a></span> -->
+                 <div class="announceTitle"><img class="infoIcon" src="/assets/info-white.png">  Parade and the Husky Startup Challenge</div>
+               <div class="announceDescription"> Oct. 3 -
+                 A week ago, the Parade Team had the honor of speaking at this year’s first workshop in
+                  Northeastern’s fast-track to startup fame,
+                 the Husky Startup Challenge (HSC). Hosted by Entrepreneurs...</div></a></span>
+
+
+
 
               <h2 class="" style="font-size:60px;margin-bottom:25px">News</h2>
               <span id="announce"> Loading Announcements...</span>
