--- a/index.html
+++ b/index.html
@@ -133,8 +133,6 @@
 
     <h2 class="prettyFontColor secondPanel" style="font-size:60px;margin-bottom:15px">Meet the Team.</h2>
 
-
-
               <div class='meetTheTeam'>
 
                 <div class='meetTheTeamRow'>
@@ -180,6 +178,7 @@
                   </p>
                     </div>
                 </div>
+                <!-- ROW 1 END  -->
           <div class='meetTheTeamRow'>
             <div class='bio'>
                   <img
@@ -220,11 +219,8 @@
                           pleasing and that users have positive experiences. She is currently on co-op in Boston at LevelUp.
                         </p>
                         </div>
-
-
-
               </div>
-
+              <!-- ROW TWO END -->
 
               <div class='meetTheTeamRow'>
                 <div class='bio'>
@@ -265,11 +261,8 @@
                               and has joined the Parade team as a Social Media Marketer
                             </p>
                             </div>
-
-
-
                   </div>
-
+                  <!-- ROW 3 END -->
 
               </div>
 
