--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                   </a>
                   </p>
                 </div>
-              <form id="contact-form" method="post">
+<!--               <form id="contact-form" method="post">
                     <h2>Name</h2>
                     <input type="text" placeholder="  Joseph Aoun" id="contact-name" class="form-control singleLineContactField"  />
                     <br>
@@ -300,7 +300,7 @@
                     <br>
                     <button type="button" style="margin-top:20px;" onClick="lambdaEmailSubmit()" class="btn" >Submit Feedback</button>
                     <!-- TODO: Add some kind of capcha/CSRFprotect -->
-              </form>
+              </form> -->
 
               <h2 style="font-size: 50px;margin-bottom:10px;margin-top:15px">Follow us!</h2>
                 <div>
