--- a/index.html
+++ b/index.html
@@ -274,12 +274,12 @@
                   <h2 style="font-size: 50px;margin-bottom:15px">Contact Us!</h2>
                   <div class="contactDescriptionStyle">
                   <p>
-                    Parade is currently in beta and looking for any and all feedback. Let us
+                    Parade is currently in active development and looking for any and all feedback. Let us
                     know your feature requests, bugs, or general thoughts. For spotlight submissions or other inquiries,
                     a member of the Parade team will follow up with you at the address you provide.
                   </p>
                   <p>
-                    You can also reach us at
+                    You can reach us at
                   <a
                     style="color:#fff"
                     href="mailto:team@parade.events">
@@ -298,8 +298,7 @@
                     <textarea rows="10" id="contact-feedback" placeholder="Enter your message…" class="form-control multiLineContactField">
                     </textarea>
                     <br>
-                    <button type="button" style="margin-top:20px;" onClick="lambdaEmailSubmit()" class="btn" >Submit Feedback</button>
-                    <!-- TODO: Add some kind of capcha/CSRFprotect -->
+                    <button type="button" style="margin-top:20px;" onClick="lambdaEmailSubmit()" class="btn" >Submit Feedback</button>                
               </form> -->
 
               <h2 style="font-size: 50px;margin-bottom:10px;margin-top:15px">Follow us!</h2>
