added help wanted

--- a/index.html
+++ b/index.html
@@ -303,8 +303,11 @@
                   <h2 style="font-size: 50px;margin-bottom:15px">Contact Us!</h2>
                   <div class="contactDescriptionStyle">
                   <p>
-                    Parade is currently in active development and looking for any and all feedback. Let us
-                    know your feature requests, bugs, or general thoughts. For spotlight submissions or other inquiries,
+                    Parade is currently in active development and looking for <strong>any and all feedback</strong>. Let us
+                    know your feature requests, bugs, or general thoughts.
+                  </p>
+                  <p>
+                    For spotlight submissions or other inquiries,
                     a member of the Parade team will follow up with you at the address you provide.
                   </p>
                   <p>
@@ -327,8 +330,26 @@
                     <textarea rows="10" id="contact-feedback" placeholder="Enter your message…" class="form-control multiLineContactField">
                     </textarea>
                     <br>
-                    <button type="button" style="margin-top:20px;" onClick="lambdaEmailSubmit()" class="btn" >Submit Feedback</button>                
+                    <button type="button" style="margin-top:20px;" onClick="lambdaEmailSubmit()" class="btn" >Submit Feedback</button>
               </form> -->
+              <br><br>
+
+              <h2 style="font-size: 50px;margin-bottom:10px;margin-top:15px">Join The Team!</h2>
+              <div class="contactDescriptionStyle">
+              <p>
+                Parade is a project driven entirely by Northeastern students. We're currently looking for more students to join
+                our dev team.
+              </p>
+              <p>
+                Interested? Send us a message at
+              <a
+                style="color:#fff"
+                href="mailto:team@parade.events">
+                team@parade.events
+              </a>
+              to learn more.
+              </p>
+            </div>
 
               <h2 style="font-size: 50px;margin-bottom:10px;margin-top:15px">Follow us!</h2>
                 <div>
