--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <meta name="keywords" content="Northeastern,aoun,iOS,Android,iPhone,App Store,Play Store,@paradeapp,@paradeeventsapp,Parade,elephant,blue,RSVP,NU,NEU,events,clubs,students,student organizations,student orgs,Northeastern University,Boston,MA,app,application,calendar,events calendar,SGA,university,CS,discover,study,huskies,fall fest,activities fair">
       <meta name="author" content="Josh Spicer,Carter Tune">
       <meta name="apple-itunes-app" content="app-id=1380171412">
+      <meta name="google-site-verification" content="p_kiHMjhgMik_Xdstm0ZYuq6HjHRMNRdKAK1kcbfeF8" />
 
       <!-- Favicon -->
       <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
