3/4 bio updates. Parade inc footer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="description"
     content="An event discovery app for Northeastern University clubs and student organizations. Available now on Android, iPhone, and iPad.">
   <meta name="keywords"
-    content="Northeastern,aoun,iOS,Android,iPhone,App Store,Play Store,@paradeapp,@paradeeventsapp,Parade,elephant,blue,RSVP,NU,NEU,events,clubs,students,student organizations,student orgs,Northeastern University,Boston,MA,app,application,calendar,events calendar,SGA,university,CS,discover,study,huskies,fall fest,activities fair">
+    content="Northeastern,aoun,iOS,Android,iPhone,App Store,Play Store,Parade Inc, @paradeapp,@paradeeventsapp,Parade,elephant,blue,RSVP,NU,NEU,events,clubs,students,student organizations,student orgs,Northeastern University,Boston,MA,app,application,calendar,events calendar,SGA,university,CS,discover,study,huskies,fall fest,activities fair">
   <meta name="author" content="Josh Spicer,Carter Tune">
   <meta name="apple-itunes-app" content="app-id=1380171412">
 
@@ -183,26 +183,29 @@
           <h3 style="margin:0px">Developer</h3>
 
           <p style="font-size:16px;">
-            Carter studies Computer Science and recently completed his first co-op at
+            Carter studies Computer Science and last co-oped at
             SelfMade in New York City. Carter is involved in all stages of product development and takes an
             active role in planning and outreach.
           </p>
         </div>
         <div class='bio'>
-          <img class='headshot' src='./assets/faces/josh.png' alt='josh' />
+          <img class='headshot' src='https://joshspicer.com/assets/me/4.png' alt='josh' />
           <div>
             <a style="text-decoration: none" alt="joshspicer.com" href="https://joshspicer.com/">
               <img style="padding:10px;width:30px;height:30px" src='./assets/social/website.png' />
-            </a>
+              <a style="text-decoration: none" href="https://www.linkedin.com/in/joshspicer/">
+                <img style="padding:10px;padding-top:15px;margin-bottom:5px;width:20px;height:20px"
+                  src='./assets/social/linkedin.png' />
+              </a>
           </div>
 
           <h2 style="margin-top: 8px;font-size:35px;margin-bottom:2px">Josh Spicer</h2>
           <h3 style="margin:0px">Developer</h3>
 
           <p style="font-size:16px;">
-            Josh is studying Computer Science/Cyber Operations and recently completed a co-op at
-            Virtual Security Research (VSR). Josh is involved in product development while also
-            handling deployment and management of Parade's cloud infrastructure.
+            Josh is a fourth year CS student. He is focused on product development,
+            deployment and management of Parade's cloud infrastructure, and
+            execution of Parade's core mission. Josh's last internship was as a Backend Engineer at Microsoft.
           </p>
         </div>
       </div>
@@ -220,9 +223,9 @@
           <h3 style="margin:0px">Outreach</h3>
 
           <p style="font-size:16px;">
-            Kathleen is a third year Pharmacy student currently on co-op in Cape Cod.
-            Kathleen works on communication and outreach initiatives for Parade,
-            utilizing connections with SGA and Northeastern to help promote and improve the app.
+            Kathleen is a fourth year pharmacy student with interests in entrepreneurship, nutrition, and business.
+            Kathleen works on communication and outreach initiatives for Parade, leveraging community connections across
+            Northeastern to help promote and improve the app.
           </p>
         </div>
 
@@ -237,9 +240,10 @@
           <h3 style="margin:0px">Designer</h3>
 
           <p style="font-size:16px;">
-            Pranita is a third year Interaction Design student, as well as a freelance graphic designer.
+            Pranita is a fourth year Interaction Design student, as well as a freelance graphic designer.
             She works as Parade’s UI/UX designer, ensuring both that the application’s interface is aesthetically
-            pleasing and that users have positive experiences. She is currently on co-op in Boston at LevelUp.
+            pleasing and that users have positive experiences. She just completed an internship at Cogo Labs in
+            Cambridge.
           </p>
         </div>
       </div>
@@ -309,21 +313,24 @@
             <img style="padding:5px;width:50px;height:50px" src='./assets/social/facebook-white.png' />
           </a>
         </div>
+        <br>
+        <div style="float:left">2019 Parade, Inc.</div>
+
       </div>
       <!--end Left contact-->
 
       <div id="rightContact">
 
 
-        <h2 style="font-size: 50px;margin-bottom:15px">Latest Blog Post</h2>
+        <h2 style="font-size: 50px;margin-bottom:15px">Blog Highlight</h2>
         <a style="text-decoration:none;color:#fff" href=" https://parade.events/blog/husky-startup/ ">
           <!-- <div class="announceTitle"><img class="infoIcon" src="/assets/info-white.png">  Parade Welcome Guide</div>
                <div class="announceDescription"> Aug. 21 -    Welcome to Parade! Everybody on The Parade Team is so excited
                  to get Parade in the  hands of students! We’re calling this initial launch our “Beta Phase”, where we encourage...</div></a></span> -->
           <div class="announceTitle"><img class="infoIcon" src="/assets/info-white.png"> Parade and the Husky Startup
             Challenge</div>
-          <div class="announceDescription"> Oct. 3 -
-            A week ago, the Parade Team had the honor of speaking at this year’s first workshop in
+          <div class="announceDescription">
+            The Parade Team had the honor of speaking at this year’s first workshop in
             Northeastern’s fast-track to startup fame,
             the Husky Startup Challenge (HSC). Hosted by Entrepreneurs...</div>
         </a></span>
@@ -334,10 +341,12 @@
         <h2 class="" style="font-size:60px;margin-bottom:25px">News</h2>
         <span id="announce"> Loading Announcements...</span>
 
+
       </div><!-- end right contact -->
 
-    </div><!-- End Contact Panel -->
 
+
+    </div><!-- End Contact Panel -->
 
 
     <!--- START FOURTH PANEL -->
