update carter bio

--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
           <h3 style="margin:0px">Developer</h3>
 
           <p style="font-size:16px;">
-            Carter studies Computer Science and last co-oped at
-            SelfMade in New York City. Carter is involved in all stages of product development and takes an
-            active role in planning and outreach.
+            Carter is a fourth year CS student. He is involved in all stages of product development and 
+            takes an active role in planning and outreach. In the Fall he is headed to Silicon Valley to 
+            co-op at Sumo Logic.
           </p>
         </div>
         <div class='bio'>
