--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
              Parade’s user interface and formulating new ideas for the app.
           </p>
         </div>
-        <div class='bio'>
+        <!-- <div class='bio'>
           <img class='headshot' src='./assets/faces/kirpal.png' alt='kirpal' />
           <div>
             <a style="text-decoration: none" alt="" href="">
@@ -295,10 +295,10 @@
           <p style="font-size:16px;">
            ......
           </p>
-        </div>
+        </div> -->
       </div>
       <!-- ROW 1 END  -->
-      <div class='meetTheTeamRow'>
+      <!-- <div class='meetTheTeamRow'>
         <div class='bio'>
           <img class='headshot' src='./assets/faces/ashwin.png' alt='ashwin' />
           <div>
@@ -329,7 +329,7 @@
             .....
           </p>
         </div>
-      </div>
+      </div> -->
       <!-- ROW TWO END -->
     <!-- END DEV TEAM SECTION -->
 
@@ -353,7 +353,7 @@
                   Spencer works on the vision and planning for future updates of Parade, as well as extending community outreach by gaining and reacting to valuable feedback.
               </p>
             </div>
-            <div class='bio'>
+            <!-- <div class='bio'>
               <img class='headshot' src='./assets/faces/kirpal.png' alt='kirpal' />
               <div>
                 <a style="text-decoration: none" alt="" href="">
@@ -370,7 +370,7 @@
               <p style="font-size:16px;">
                ......
               </p>
-            </div>
+            </div> -->
           </div>
           <!-- ROW 1 END  -->
         <!-- END OUTREACH TEAM SECTION -->
