--- a/index.html
+++ b/index.html
@@ -278,12 +278,36 @@
              Parade’s user interface and formulating new ideas for the app.
           </p>
         </div>
-        <!-- <div class='bio'>
-          <img class='headshot' src='./assets/faces/kirpal.png' alt='kirpal' />
+
+        <div class='bio'>
+          <img class='headshot' src='./assets/faces/isabel.jpg' alt='isabel' />
           <div>
-            <a style="text-decoration: none" alt="" href="">
+          
+              <a style="text-decoration: none" href="https://www.linkedin.com/in/isabel-b/">
+                <img style="padding:10px;padding-top:15px;margin-bottom:5px;width:20px;height:20px"
+                  src='./assets/social/linkedin.png' />
+              </a>
+          </div>
+          <h2 style="margin-top: 8px;font-size:35px;margin-bottom:2px">Isabel Bolger</h2>
+          <h3 style="margin:0px">Developer</h3>
+
+          <p style="font-size:16px;">
+            Isabel is a third year Computer Science major from Seattle. 
+            She is new to the Parade team and is excited to learn more about mobile app development. 
+            Her last internship was at Microsoft in Silicon Valley. In her free time she enjoys playing guitar, 
+            watching football, and playing with her dog.
+          </p>
+        </div>
+
+      </div>
+      <!-- ROW 1 END  -->
+
+       <div class='bio'>
+          <img class='headshot' src='./assets/faces/kirpal.jpeg' alt='kirpal' />
+          <div>
+            <a style="text-decoration: none" alt="" href="https://kirp.al/">
               <img style="padding:10px;width:30px;height:30px" src='./assets/social/website.png' />
-              <a style="text-decoration: none" href="">
+              <a style="text-decoration: none" href="https://www.linkedin.com/in/kirpaldemian/">
                 <img style="padding:10px;padding-top:15px;margin-bottom:5px;width:20px;height:20px"
                   src='./assets/social/linkedin.png' />
               </a>
@@ -293,43 +317,15 @@
           <h3 style="margin:0px">Developer</h3>
 
           <p style="font-size:16px;">
-           ......
-          </p>
-        </div> -->
-      </div>
-      <!-- ROW 1 END  -->
-      <!-- <div class='meetTheTeamRow'>
-        <div class='bio'>
-          <img class='headshot' src='./assets/faces/ashwin.png' alt='ashwin' />
-          <div>
-            <a style="text-decoration: none" href="">
-              <img style="padding:10px;padding-top:15px;margin-bottom:5px;width:20px;height:20px"
-                src='./assets/social/linkedin.png' />
-            </a>
-          </div>
-          <h2 style="margin-top: 8px;font-size:35px;margin-bottom:2px">Ashwin Varghese</h2>
-          <h3 style="margin:0px">Developer</h3>
+            Kirpal is a first year CS student. 
+            He's mainly interested in web and app development, 
+            with a focus on user interface design. He is also interested in 
+            entrepreneurship and project management. Currently, 
+            he is helping on the mobile app for Parade.
 
-          <p style="font-size:16px;">
-            ........
           </p>
-        </div>
-
-        <div class='bio'>
-          <img class='headshot' src='./assets/faces/isabel.jpg' alt='isabel' />
-          <div>
-            <a style="text-decoration: none" alt="" href="">
-              <img style="padding:10px;width:30px;height:30px" src='./assets/social/website.png' />
-            </a>
-          </div>
-          <h2 style="margin-top: 8px;font-size:35px;margin-bottom:2px">Isabel Bolger</h2>
-          <h3 style="margin:0px">Developer</h3>
-
-          <p style="font-size:16px;">
-            .....
-          </p>
-        </div>
-      </div> -->
+           
+      </div> 
       <!-- ROW TWO END -->
     <!-- END DEV TEAM SECTION -->
 
