--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="description"
     content="An event discovery app for Northeastern University clubs and student organizations. Available now on Android, iPhone, and iPad.">
   <meta name="keywords"
-    content="Northeastern,aoun,iOS,Android,iPhone,App Store,Play Store,Parade Inc, @paradeapp,@paradeeventsapp,Parade,elephant,blue,RSVP,NU,NEU,events,clubs,students,student organizations,student orgs,Northeastern University,Boston,MA,app,application,calendar,events calendar,SGA,university,CS,discover,study,huskies,fall fest,activities fair">
+    content="Northeastern,aoun,iOS,Android,iPhone,App Store,Play Store,Parade Inc, @paradeapp,@paradeeventsapp,Parade,elephant,blue,RSVP,NU,NEU,events,clubs,students,student organizations,student orgs,Northeastern University,Boston,MA,app,application,calendar,events calendar,SGA,university,CS,discover,study,huskies,fall fest,activities fair, Kathleen, Josh, Carter">
   <meta name="author" content="Josh Spicer,Carter Tune">
   <meta name="apple-itunes-app" content="app-id=1380171412">
 
