grace + webapp links

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
         <span class='navBarElements'>
           <a class="whiteLink" href='https://parade.events/blog' alt="Parade Blog"
             style='text-decoration: none;padding-right:20px'>Blog</a>
+            <a class="whiteLink" href='https://app.parade.events/' alt="web application"
+            style='text-decoration: none;padding-right:20px'>Webapp</a>
           <a class="whiteLink" style='text-decoration: none;  white-space: nowrap' href='#Contact'>Contact</a>
         </span>
       </div>
@@ -349,24 +351,24 @@
                   Spencer works on the vision and planning for future updates of Parade, as well as extending community outreach by gaining and reacting to valuable feedback.
               </p>
             </div>
-            <!-- <div class='bio'>
-              <img class='headshot' src='./assets/faces/kirpal.png' alt='kirpal' />
+            <div class="bio">
+              <img class='headshot' src='./assets/faces/grace.jpg' alt='grace' />
               <div>
-                <a style="text-decoration: none" alt="" href="">
-                  <img style="padding:10px;width:30px;height:30px" src='./assets/social/website.png' />
-                  <a style="text-decoration: none" href="">
-                    <img style="padding:10px;padding-top:15px;margin-bottom:5px;width:20px;height:20px"
-                      src='./assets/social/linkedin.png' />
-                  </a>
-              </div>
+                <a style="text-decoration: none" href="https://www.linkedin.com/in/graceyjyi">
+                  <img style="padding:10px;padding-top:15px;margin-bottom:5px;width:20px;height:20px"
+                    src='./assets/social/linkedin.png' />
+                </div>
     
-              <h2 style="margin-top: 8px;font-size:35px;margin-bottom:2px">Carolyn Chen</h2>
-              <h3 style="margin:0px">Marketing</h3>
+              <h2 style="margin-top: 8px;font-size:35px;margin-bottom:2px">Grace Yi</h2>
+              <h3 style="margin:0px">Outreach</h3>
     
               <p style="font-size:16px;">
-               ......
+                Grace is a second year Business and Communication Studies major concentrating in Marketing.
+                She is also interested in healthcare management and consulting, and is looking forward to working 
+                with the outreach team to promote Parade around campus.
               </p>
-            </div> -->
+            </div>
+
           </div>
           <!-- ROW 1 END  -->
         <!-- END OUTREACH TEAM SECTION -->
